Show generic choices with JS and flexbox

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,9 @@ main {
   font-size: 2em;
   text-align: center;
 }
+.mainWindow div {
+  flex-grow: 1;  
+}
 .achievementsButton{
   text-align: right;
 }
