Display final sentence and URL

--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,10 @@ main {
 .achievementsButton{
   text-align: right;
 }
+.finalSentence{
+  text-align: center;
+}
+
 
 .debugOutput {
   color: red;
