--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,22 @@ body {
   font-family: 'Copse', serif;
   font-size: 1.5em;
 }
+body::after {
+  content: "";
+  background: url("../img/paperlined.svg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+}
 a {
   text-decoration: none;
 }
