--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,7 @@ body {
 body::after {
   content: "";
   background: url("../img/paperlined.svg");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-size: 100%;
   opacity: 0.3;
   top: 0;
   left: 0;
