--- a/css/main.css
+++ b/css/main.css
@@ -110,9 +110,13 @@ main {
   padding-left: .5em;
 }
 .finalSentence{
-  text-align: center;
+  text-align: left;
 }
-
+.shareButtons{
+  display: inline;
+  font-size: 0.5em;
+  padding: 0 0 0 0;
+}
 
 .debugOutput {
   color: red;
