--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-/* Debug CSS */
+/* Debug CSS
 * {
   border: 1px solid red !important;
 }
-
+*/
 /* Pius Wong */
 * {
   -webkit-box-sizing: border-box;
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: lightgray;
+  background-color: white;
   display: block;
   /* font-family: 'Crimson Text', serif; */
   font-family: 'Copse', serif;
@@ -44,6 +44,7 @@ header {
   display: flex;
   -webkit-flex-wrap: wrap; /* Safari 6.1+ */
   flex-wrap: wrap;
+  flex-direction: row;
 }
 .infoPrimary {
   width: 33%;
@@ -59,6 +60,14 @@ header {
   width: 33%;
   text-align: center;
   padding: 2em 0 ;
+}
+.startOver button{
+  font-family: 'Copse', serif;
+  font-size: 1.5em;
+  padding: 0.1em;
+  border-radius: 0.5em;
+  background-color: white;
+  border: 0;
 }
 main {
   width: 100%;
@@ -115,7 +124,7 @@ main {
 .shareButtons{
   display: inline;
   font-size: 0.5em;
-  padding: 0 0 0 0;
+  padding:
 }
 
 .debugOutput {
