--- a/css/paper.css
+++ b/css/paper.css
@@ -1,10 +1,22 @@
 /* CSS paper design from: https://www.sitepoint.com/pure-css3-paper-curls/ and https://paulund.co.uk/learn-css-box-shadow*/
+.paper-unclickable{
+  background-color: #fffcf7;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, .13);
+  padding: 0.5em;
+}
 
 .paper {
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, .06);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, .07);
   position: relative;
+}
+.paper:hover{
+  color: #1a63f4;
+  -webkit-transition: color 0.5s; /*Safari3.1-6.0*/
+  transition: color .5s;
 }
 .paper:before, .paper:after
 {
@@ -13,7 +25,7 @@
   content: "";
   bottom: 15px;
   left: 3px;
-  width: 50%;
+  width: 49%;
   top: 80%;
   max-width:300px;
   background: #999;
