--- a/css/paper.css
+++ b/css/paper.css
@@ -5,6 +5,7 @@
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, .13);
   padding: 0.5em;
+  margin: 0.5em;
 }
 
 .paper {
@@ -12,6 +13,7 @@
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, .07);
   position: relative;
+  margin: 0.5em;
 }
 .paper:hover{
   color: #1a63f4;
@@ -25,7 +27,7 @@
   content: "";
   bottom: 15px;
   left: 3px;
-  width: 49%;
+  width: 48%;
   top: 80%;
   max-width:300px;
   background: #999;
