--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ header {
 }
 .infoPrimary {
   width: 33%;
-  padding: 0 0.5em 0.5em 0;
+  padding: 0 0.5em 0 0.5em;
   align: center;
 }
 .infoPrimary .titleCard {
