--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,8 @@ header {
   -webkit-flex-wrap: wrap; /* Safari 6.1+ */
   flex-wrap: wrap;
   flex-direction: row;
+  align-items: center;
+  justify-content:center;
 }
 .infoPrimary {
   width: 33%;
@@ -88,6 +90,7 @@ header {
 .startOver button{
   font-family: 'Copse', serif;
   font-size: 1.5em;
+  font-weight: bold;
   padding: 0.5em;
   background-color: white;
   border: 0;
@@ -120,7 +123,7 @@ main {
   margin: 0;
 }
 footer {
-  padding: 0.5em;
+  padding: 0 0.5em 0.5em 0.5em;
 }
 .achievements{
   text-align: left;
