--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,8 @@ header {
 }
 .infoSecondary {
   width: 33%;
-  padding: 0 0.5em 0.5em 0.5em;
-  font-size: 0.9em;
+  padding: 0.5em;
+  font-size: 1em;
 }
 .startOver {
   width: 33%;
