--- a/css/main.css
+++ b/css/main.css
@@ -163,11 +163,12 @@ footer {
 }
 .finalSentence{
   text-align: left;
+  margin: 0 !important;
 }
 .shareButtons{
   display: inline;
   font-size: 0.5em;
-  padding: 0.5em 0 0 0;
+  padding: 0;
 }
 
 @media only screen and (min-width: 1200px) {
