Aesthetic: Paper around scores limited to text coverage

--- a/css/main.css
+++ b/css/main.css
@@ -143,9 +143,15 @@ footer {
 #sOverall{
   color: red;
 }
+.scoreContainer{
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;     /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* Safari */
+  display: flex;
+}
 .scores{
   font-size: 0.8em;
-  display: block;
   padding-left: 1em;
 }
 .scores>div{
