Swap position of choices and message display

--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ main {
 .messageDisplay{
   font-size: 1.5em;
   text-align: center;
-  margin: 0.5em;
+  margin: 0 0.5em 0.5em 0.5em;
 }
 .mainWindow{
   font-size: 2em;
