Aesthetic: Add wood background

--- a/css/paper.css
+++ b/css/paper.css
@@ -3,7 +3,7 @@
   background-color: #fffcf7;
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, .13);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 50px #ddd8d0;
   padding: 0.5em;
   margin: 0.5em;
 }
