--- a/css/main.css
+++ b/css/main.css
@@ -19,20 +19,11 @@ body {
   /* font-family: 'Crimson Text', serif; */
   font-family: 'Copse', serif;
   font-size: 1.5em;
+  /* Wood patterns from @mikehearn https://www.transparenttextures.com/ */
+  background: url("../img/wood.png");
+  background-repeat: repeat;
+  background-position: center top;
 }
-/* Wood patterns from @mikehearn https://www.transparenttextures.com/
-body::after {
-  content: "";
-  background: url("../img/tileable-wood-colored.png");
-  background-size: auto;
-  opacity: 0.9;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}*/
 a {
   text-decoration: none;
   color: #1a63f4;
