--- a/css/paper.css
+++ b/css/paper.css
@@ -68,12 +68,20 @@
   -moz-box-shadow: 0 15px 10px #222;
   box-shadow: 0 15px 10px #222;
   transform: rotate(-3deg);
+  -webkit-animation-name: fadeInDelay;
+  animation-name: fadeInDelay;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
 .paper1:after
 {
   transform: rotate(3deg);
   right: 4px;
   left: auto;
+  -webkit-animation-name: fadeInDelay;
+  animation-name: fadeInDelay;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
 
 .paper2:before
@@ -89,6 +97,10 @@
   background: #777;
   box-shadow: 0 15px 10px #888;
   transform: rotate(-3deg);
+  -webkit-animation-name: fadeInDelay;
+  animation-name: fadeInDelay;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
 
 .paper3:after
@@ -105,6 +117,10 @@
   background: #777;
   box-shadow: 0 15px 10px #777;
   transform: rotate(3deg);
+  -webkit-animation-name: fadeInDelay;
+  animation-name: fadeInDelay;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
 
 .paper4:before, .paper4:after
@@ -120,12 +136,20 @@
   background: #777;
   box-shadow: 0 14px 20px #777;
   transform: rotate(-8deg);
+  -webkit-animation-name: fadeInDelay;
+  animation-name: fadeInDelay;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
 .paper4:after
 {
   transform: rotate(8deg);
   right: 10px;
   left: auto;
+  -webkit-animation-name: fadeInDelay;
+  animation-name: fadeInDelay;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
 }
 
 .paper5{
@@ -142,6 +166,10 @@
     left:10px;
     right:10px;
     border-radius:100px / 10px;
+    -webkit-animation-name: fadeInDelay;
+    animation-name: fadeInDelay;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
 }
 
 .paper6{
@@ -158,12 +186,20 @@
     left:10px;
     right:10px;
     border-radius:100px / 10px;
+    -webkit-animation-name: fadeInDelay;
+    animation-name: fadeInDelay;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
 }
 .paper6:after
 {
     right:10px;
     left:auto;
     transform:skew(8deg) rotate(3deg);
+    -webkit-animation-name: fadeInDelay;
+    animation-name: fadeInDelay;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
 }
 
 .paper7
@@ -182,12 +218,20 @@
     left:0;
     right:0;
     border-radius:100px / 10px;
+    -webkit-animation-name: fadeInDelay;
+    animation-name: fadeInDelay;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
 }
 .paper7:after
 {
     right:10px;
     left:auto;
     transform:skew(8deg) rotate(3deg);
+    -webkit-animation-name: fadeInDelay;
+    animation-name: fadeInDelay;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
 }
 
 @media only screen and (max-width: 380px) {
