--- a/css/paper.css
+++ b/css/paper.css
@@ -3,10 +3,13 @@
   background-color: #eafcff;
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 30px #ddd8d0;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 25px #ddd8d0;
   padding: 0.5em;
   margin: 0.5em;
   position: relative;
+}
+.messageDisplay {
+  background-color: #fdffe8;
 }
 .paper-unclickable:before, .paper-unclickable:after
 {
