--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ footer {
   padding-left: 0.5em;
 }
 #sOverall{
-  color: red;
+  color: #cc2626;
 }
 .scoreContainer{
   display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6 */
