--- a/css/animate.css
+++ b/css/animate.css
@@ -154,3 +154,36 @@
   from {transform: translateX(-100%);}
   to {transform: translateX(0%);}
 }
+
+.pulse{
+	animation-name: pulse;
+	-webkit-animation-name: pulse;
+
+	animation-duration: 2s;
+	-webkit-animation-duration: 2s;
+
+	animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes pulse {
+	0% {
+		-webkit-transform: scale(0.96) rotate(1deg);
+	}
+	50% {
+		-webkit-transform: scale(1) rotate(-0.5deg);
+	}
+	100% {
+		-webkit-transform: scale(0.96) rotate(1deg);
+	}
+}
+@keyframes pulse {
+	0% {
+		transform: scale(0.96) rotate(1deg);
+	}
+	50% {
+		transform: scale(1) rotate(-0.5deg);
+	}
+	100% {
+		transform: scale(0.96) rotate(1deg);
+	}
+}
