--- a/css/paper.css
+++ b/css/paper.css
@@ -52,6 +52,16 @@
   animation-duration: 0.9s;
 }
 
+.paper-unclickable-noShadow{
+  background-color: #eafcff;
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1), inset 0 0 25px #ddd8d0;
+  padding: 0.5em;
+  margin: 0.5em;
+  position: relative;
+}
+
 .paper{
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
